scss 재정의 파일명 변경

--- a/tags/templates/index.html
+++ b/tags/templates/index.html
@@ -13,7 +13,7 @@
 <title>templates | Hello Kikcode</title>
 <link rel="manifest" href="/manifest.json">
 <link rel="icon" href="/favicon.png" >
-<link rel="stylesheet" href="/book.min.6b065be18b0f072b9767bff3ce3a0a78f18cd7bd966c501e681b64c4057ad6b2.css" integrity="sha256-awZb4YsPByuXZ7/zzjoKePGM172WbFAeaBtkxAV61rI=" crossorigin="anonymous">
+<link rel="stylesheet" href="/book.min.0b1f85bb66255744648c595522d58ea8b2c8b9d66bc5d3a2bb52b81ca7e4c24b.css" integrity="sha256-Cx&#43;Fu2YlV0RkjFlVItWOqLLIudZrxdOiu1K4HKfkwks=" crossorigin="anonymous">
   <script defer src="/flexsearch.min.js"></script>
   <script defer src="/en.search.min.d29b79a8d032ec36789e2670acf351d8ded0f81bf0f2da4939ecfb837f740f25.js" integrity="sha256-0pt5qNAy7DZ4niZwrPNR2N7Q&#43;Bvw8tpJOez7g390DyU=" crossorigin="anonymous"></script>
 <link rel="alternate" type="application/rss+xml" href="https://kikcode.github.io/tags/templates/index.xml" title="Hello Kikcode" />
