첫번째 초안문서 정리

--- a/tags/templates/index.html
+++ b/tags/templates/index.html
@@ -13,9 +13,9 @@
 <title>templates | Hello Kikcode</title>
 <link rel="manifest" href="/manifest.json">
 <link rel="icon" href="/favicon.png" >
-<link rel="stylesheet" href="/book.min.0b1f85bb66255744648c595522d58ea8b2c8b9d66bc5d3a2bb52b81ca7e4c24b.css" integrity="sha256-Cx&#43;Fu2YlV0RkjFlVItWOqLLIudZrxdOiu1K4HKfkwks=" crossorigin="anonymous">
+<link rel="stylesheet" href="/book.min.91ee103e9bcd403c4a1939651654bff5afea6f3266bfe50e01ff1f4e66738901.css" integrity="sha256-ke4QPpvNQDxKGTllFlS/9a/qbzJmv&#43;UOAf8fTmZziQE=" crossorigin="anonymous">
   <script defer src="/flexsearch.min.js"></script>
-  <script defer src="/en.search.min.d29b79a8d032ec36789e2670acf351d8ded0f81bf0f2da4939ecfb837f740f25.js" integrity="sha256-0pt5qNAy7DZ4niZwrPNR2N7Q&#43;Bvw8tpJOez7g390DyU=" crossorigin="anonymous"></script>
+  <script defer src="/en.search.min.bf4ae128013182e4b0b7dab3ef8d85e73645342699d9dffbfb88413e19c34c6a.js" integrity="sha256-v0rhKAExguSwt9qz742F5zZFNCaZ2d/7&#43;4hBPhnDTGo=" crossorigin="anonymous"></script>
 <link rel="alternate" type="application/rss+xml" href="https://kikcode.github.io/tags/templates/index.xml" title="Hello Kikcode" />
 <!--
 Made with Book Theme
@@ -68,7 +68,7 @@ https://github.com/alex-shpak/hugo-book
   
 
   
-    <a href="/docs/example/" class="">Example Site</a>
+    <span>Kikdocs</span>
   
 
           
@@ -81,53 +81,9 @@ https://github.com/alex-shpak/hugo-book
   
 
   
-    <a href="/docs/example/table-of-contents/" class="">Table of Contents</a>
-  
-
-          
-  <ul>
-    
-      
-        <li>
-          
-  
-  
-
-  
-    <a href="/docs/example/table-of-contents/with-toc/" class="">With ToC</a>
-  
-
-        </li>
-      
-    
-      
-        <li>
-          
-  
-  
-
-  
-    <a href="/docs/example/table-of-contents/without-toc/" class="">Without ToC</a>
-  
-
-        </li>
-      
-    
-  </ul>
-
-        </li>
-      
-    
-      
-        <li>
-          
-  
-  
-
-  
-    <input type="checkbox" id="section-4e46b01272d410b3a99461d79326ddf4" class="toggle"  />
-    <label for="section-4e46b01272d410b3a99461d79326ddf4" class="flex justify-between">
-      <a role="button" class="">Collapsed</a>
+    <input type="checkbox" id="section-5c48dafe230b1def54016bf34379c060" class="toggle"  />
+    <label for="section-5c48dafe230b1def54016bf34379c060" class="flex justify-between">
+      <a href="/docs/kikdocs/hugo/" class="">Hugo</a>
     </label>
   
 
@@ -141,11 +97,11 @@ https://github.com/alex-shpak/hugo-book
   
 
   
-    <a href="/docs/example/collapsed/3rd-level/" class="">3rd Level</a>
+    <a href="/docs/kikdocs/hugo/configure-hugo/" class="">Configure Hugo</a>
   
 
-          
-  <ul>
+        </li>
+      
     
       
         <li>
@@ -154,187 +110,13 @@ https://github.com/alex-shpak/hugo-book
   
 
   
-    <a href="/docs/example/collapsed/3rd-level/4th-level/" class="">4th Level</a>
+    <a href="/docs/kikdocs/hugo/hugo-bundles-%EC%A2%85%EB%A5%98/" class="">Hugo Bundles 종류</a>
   
 
         </li>
       
     
   </ul>
-
-        </li>
-      
-    
-  </ul>
-
-        </li>
-      
-    
-  </ul>
-
-        </li>
-      
-    
-      
-        <li class="book-section-flat" >
-          
-  
-  
-
-  
-    <span>Shortcodes</span>
-  
-
-          
-  <ul>
-    
-      
-        <li>
-          
-  
-  
-
-  
-    <a href="/docs/shortcodes/buttons/" class="">Buttons</a>
-  
-
-        </li>
-      
-    
-      
-        <li>
-          
-  
-  
-
-  
-    <a href="/docs/shortcodes/columns/" class="">Columns</a>
-  
-
-        </li>
-      
-    
-      
-        <li>
-          
-  
-  
-
-  
-    <a href="/docs/shortcodes/details/" class="">Details</a>
-  
-
-        </li>
-      
-    
-      
-        <li>
-          
-  
-  
-
-  
-    <a href="/docs/shortcodes/expand/" class="">Expand</a>
-  
-
-        </li>
-      
-    
-      
-        <li>
-          
-  
-  
-
-  
-    <a href="/docs/shortcodes/hints/" class="">Hints</a>
-  
-
-        </li>
-      
-    
-      
-        <li>
-          
-  
-  
-
-  
-    <a href="/docs/shortcodes/katex/" class="">Katex</a>
-  
-
-        </li>
-      
-    
-      
-        <li>
-          
-  
-  
-
-  
-    <a href="/docs/shortcodes/mermaid/" class="">Mermaid</a>
-  
-
-        </li>
-      
-    
-      
-        <li>
-          
-  
-  
-
-  
-    <input type="checkbox" id="section-d3fc1bf6d66cd84b896a0af9f40cb1d5" class="toggle"  />
-    <label for="section-d3fc1bf6d66cd84b896a0af9f40cb1d5" class="flex justify-between">
-      <a href="/docs/shortcodes/section/" class="">Section</a>
-    </label>
-  
-
-          
-  <ul>
-    
-      
-        <li>
-          
-  
-  
-
-  
-    <a href="/docs/shortcodes/section/first-page/" class="">First Page</a>
-  
-
-        </li>
-      
-    
-      
-        <li>
-          
-  
-  
-
-  
-    <a href="/docs/shortcodes/section/second-page/" class="">Second Page</a>
-  
-
-        </li>
-      
-    
-  </ul>
-
-        </li>
-      
-    
-      
-        <li>
-          
-  
-  
-
-  
-    <a href="/docs/shortcodes/tabs/" class="">Tabs</a>
-  
 
         </li>
       
